--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/Yamami1221/DiscordBotV2/issues"
   },
-  "homepage": "https://github.com/Yamami1221/DiscordBotV2#readme"
+  "homepage": "https://github.com/Yamami1221/DiscordBotV2#readme",
+  "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.1.4",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "libsodium-wrappers": "^0.7.11",
+    "sodium-native": "^4.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "nodemon": "^2.0.22"
+  }
 }
