--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ffmpeg-static": "^5.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "libsodium-wrappers": "^0.7.11",
+    "play-dl": "^1.9.6",
     "sodium-native": "^4.0.3"
   },
   "devDependencies": {
